2011-02-22  Steffen Kamper  <steffen@typo3.org

	* Fixed bug #17672: CSH - each label fires one request
	* Follow-up to #17383: Open forms cannot be saved after "Relogin" (Security Token errors)
	* Fixed bug #17699: ExtDirect API use relative url for ajax.php

2011-02-22  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #17701: Generated t3x might be corrupted

2011-02-21  Steffen Kamper  <steffen@typo3.org

	* Fixed bug #17383: Open forms cannot be saved after "Relogin" (Security Token errors) (Thanks to Helmut Hummel)
	* Fixed bug #17684 Admin Panel renders invalid markup (Thanks to Markus Klein)

2011-02-20  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #17592: ExtDirect API calls are splitted in single requests and slows down page loading

2011-02-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to issue #17677: htmlArea RTE: Classes configuration is loaded twice
	* Fixed bug #17669: htmlArea RTE: Dialogue window positioning properties not honoured

2011-02-20  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #17498: The refresh login dialogue is shown even if the session already timed out (Thanks to Helmut Hummel)

2011-02-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17676: htmlArea RTE: Some combo stores are loaded twice
	* Fixed bug #17677: htmlArea RTE: Classes configuration is loaded twice

2011-02-19  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #17656: Unit test fails because of invalid clear.gif (Thanks to Alexander Stehlik)

2011-02-17  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17592: ExtDirect API calls are splitted in single requests and slows down page loading

2011-02-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17616: htmlArea RTE: Link dialogue doesn't open when anchor class is set with double quotes

2011-02-17  Oliver Hader  <oliver.hader@typo3.org>

	* Fixed bug #17355: Dependencies in sysext 'version' and 'workspaces'
	* Fixed bug #17244: Error Message while Updating 4.4.6 > 4.5
